- rearrange functions - update swagger - add mongoose-sequence
