# src/resources/swagger.yaml
@@ -45,7 +45,7 @@ paths:
         required: true
       responses:
         "400":
-          description: "the file is valid and registration was created"
+          description: "the file structure is invalid, couldn't be parsed correctly"
           content:
             application/json:
               schema:
@@ -83,8 +83,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/CreateRegistration"
 
-  /submission/program/{programId}/registration/{id}:
-    patch:
+  /submission/program/{programId}/registration/{id}/commit:
+    post:
       parameters:
         - name: id
           description: the id of the registration
@@ -106,7 +106,7 @@ paths:
         "500":
           $ref: "#/components/responses/ServerError"
         "200":
-          description: "the registration was committed and the donors / specimens/ samples added to the clinical db"
+          description: "the registration was committed and the donors / specimens / samples added to the clinical db"
 servers:
   - url: /
 components:
@@ -125,6 +125,11 @@ components:
   schemas:
     RegistrationValidationError:
       type: object
+      required:
+        - fieldName
+        - info
+        - index
+        - type
       properties:
         fieldName:
           type: string
@@ -132,9 +137,24 @@ components:
         info:
           type: object
           description: contains context information related to the error
-        donorSubmitterId:
-          type: string
-          description: the donor Id in that row
+          properties:
+            value:
+              type: string
+              nullable: true
+              description: the faulty value
+            sampleSubmitterId:
+              type: string
+              nullable: true
+              description: the sample Id in that row
+            donorSubmitterId:
+              type: string
+              nullable: true
+              description: the donor Id in that row
+            specimenSubmitterId:
+              type: string
+              nullable: true
+              description: the specimen Id in that row
+          additionalProperties: true
         index:
           type: number
           format: integer
@@ -159,6 +179,12 @@ components:
 
     Registration:
       type: object
+      required:
+        - _id
+        - programId
+        - creatorId
+        - stats
+        - records
       properties:
         _id:
           type: string
@@ -186,6 +212,15 @@ components:
             $ref: "#/components/schemas/Record"
 
     Record:
+      required:
+        - program_id
+        - donor_submitter_id
+        - gender
+        - specimen_submitter_id
+        - specimen_type
+        - tumour_normal_designation
+        - sample_submitter_id
+        - sample_type
       properties:
         program_id:
           type: string
@@ -208,6 +243,8 @@ components:
       type: object
 
     CreateRegistration:
+      required:
+        - successful
       type: object
       properties:
         registration:
@@ -217,6 +254,6 @@ components:
           description: whether the file was valid or not
         errors:
           type: array
-          description:
+          description: list of all errors, should be empty on success
           items:
             $ref: "#/components/schemas/RegistrationValidationError"
